# TradeEngine

./: .env.example  .gitignore  DockerFile  Makefile  README.md  conf.py  docker-compose.yml  llm-context.md  main.py  manage.py  pyproject.toml  requirements.txt
LimitOrderBook/: asgi.py  settings.py  urls.py  wsgi.py
apps/orderbook/: apps.py  exceptions.py  orderbook.py  orderlist.py  ordertree.py  trade.py
src/: exceptions.py  order.py  orderbook.py  orderlist.py  ordertree.py
src/api/: __init__.py  schemas.py
src/orderbook/: order.py  orderbook.py  orderlist.py  ordertree.py  trade.py
tests/: test_api.py  test_order.py  test_orderbook.py  test_orderbook_extra.py  test_orderlist.py  test_ordertree.py  test_trade.py
tests/api/: test_api.py
tests/orderbook/: test_order.py  test_orderbook.py  test_orderlist.py  test_ordertree.py  test_trade.py
