[project]
name = "tradeengine"
version = "0.1.0"
description = "Python trade engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "ruff>=0.14.1",
    "sortedcontainers>=2.4.0",
    "uvicorn>=0.38.0",
    "pytest>=8.3.3",
    "httpx>=0.27.2",
    "scipy>=1.16.2",
]
